fix: sp page balance column gap

--- a/src/detail/accountBalance/index.module.scss
+++ b/src/detail/accountBalance/index.module.scss
@@ -3,6 +3,7 @@
   .account-balance{
     .title-label {
       font-size: 16px;
+      column-gap: 4px;
     }
     .title-value {
       margin-left: 5px;
